k8s-deploy/demo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "demo"
  namespace: "demo"
spec:
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
  type: NodePort
  selector:
    app: "demo"
