k8s-deploy/demo-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: "demo"
  namespace: "demo"
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
  labels:
    app: demo
spec:
  rules:
    - http:
        paths:
          - path: /*
            backend:
              serviceName: "demo"
              servicePort: 80
